--- a/.env.example
+++ b/.env.example
@@ -22,7 +22,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=example_app
+DB_DATABASE=choultry
 DB_USERNAME=root
 DB_PASSWORD=
 
